--- a/src/error.html
+++ b/src/error.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>radlinski.dev</title>
+    <title>radlinski.dev - error</title>
     <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
-    <h1>welcome to radlinski.dev!</h1>
+    <h1>oops, something went wrong</h1>
     <!-- <script src="index.js"></script> -->
   </body>
 </html>
